# ex4

./: .gitignore  CMakeLists.txt  CmdAlgoSettings.cpp  CmdAlgoSettings.h  CmdClassify.cpp  CmdClassify.h  CmdDisplayResults.cpp  CmdDisplayResults.h  CmdDownloadResults.cpp  CmdDownloadResults.h  CmdUploadCsv.cpp  CmdUploadCsv.h  Command.cpp  Command.h  DefaultIO.h  README.md  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h  TcpClient.cpp  TcpClient.h  cli.cpp  cli.h  distances.h  knn.cpp  knn.h  main.cpp  makefile  server.cpp  server.h  threadSafeQueue.cpp  utils.cpp  utils.h
